tests/ui/unknown_annotation.stderr
error: Unknown annotation '@respons'
       help: did you mean '@response'?
       note: valid annotations are @response, @example, @tag, @security, @id, @hidden, @rovo-ignore
 --> tests/ui/unknown_annotation.rs:9:1
  |
9 | /// @respons 200 Json<String> Typo in annotation
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
